# cocogitto-depgraph

./: Cargo.toml
example/: maven.rs
src/: lib.rs
src/resolvers/: maven.rs  mod.rs  npm.rs
tests/: cargo_workspace.rs  resolver_tests.rs
tests/lang/maven_modules/: pom.xml
tests/lang/maven_modules/package-a/: pom.xml
tests/lang/maven_modules/package-a/src/main/java/com/example/package-a/: Main.java
tests/lang/maven_modules/package-b/: pom.xml
tests/lang/maven_modules/package-e/src/main/java/com/example/package-e/: E.java
